@@ -1,25 +1,20 @@
 package org.lodder.subtools.multisubdownloader.gui.dialog;
 
+import static org.lodder.subtools.multisubdownloader.Messages.*;
+
 import javax.swing.*;
-import javax.swing.event.*;
-import javax.swing.text.*;
+import javax.swing.event.DocumentEvent;
+import javax.swing.event.DocumentListener;
+import javax.swing.text.BadLocationException;
 import java.awt.*;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.io.Serial;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.function.Function;
 
-import lombok.experimental.ExtensionMethod;
 import net.miginfocom.swing.MigLayout;
-import org.lodder.subtools.multisubdownloader.Messages;
-import org.lodder.subtools.multisubdownloader.gui.jcomponent.button.AbstractButtonExtension;
-import org.lodder.subtools.multisubdownloader.gui.jcomponent.button.JButtonExtension;
-import org.lodder.subtools.multisubdownloader.gui.jcomponent.component.ComponentExtension;
-import org.lodder.subtools.multisubdownloader.gui.jcomponent.container.ContainerExtension;
-import org.lodder.subtools.multisubdownloader.gui.jcomponent.jcomponent.JComponentExtension;
-import org.lodder.subtools.multisubdownloader.gui.jcomponent.jtextfield.JTextFieldExtension;
+import org.jspecify.annotations.Nullable;
 import org.lodder.subtools.multisubdownloader.lib.ReleaseFactory;
 import org.lodder.subtools.multisubdownloader.lib.library.LibraryBuilder;
 import org.lodder.subtools.multisubdownloader.settings.model.Settings;
@@ -34,17 +29,15 @@ import org.lodder.subtools.sublibrary.model.TvRelease;
 import org.lodder.subtools.sublibrary.model.VideoType;
 import org.lodder.subtools.sublibrary.userinteraction.UserInteractionHandler;
 
-@ExtensionMethod({ JButtonExtension.class, AbstractButtonExtension.class, JComponentExtension.class, ContainerExtension.class,
-        ComponentExtension.class, JTextFieldExtension.class })
 public class StructureBuilderDialog extends MultiSubDialog implements DocumentListener {
 
-    @Serial
-    private static final long serialVersionUID = -5174968778375028124L;
+    @Serial private static final long serialVersionUID = -5174968778375028124L;
+
     private final VideoType videoType;
     private final StructureType structureType;
-    private final Manager manager;
     private final UserInteractionHandler userInteractionHandler;
     private final Function<String, ? extends LibraryBuilder> libraryBuilder;
+
     private JTextField txtStructure;
     private JLabel lblPreview;
     private TvRelease tvRelease;
@@ -56,86 +49,80 @@ public class StructureBuilderDialog extends MultiSubDialog implements DocumentLi
         FILE, FOLDER
     }
 
-    public StructureBuilderDialog(JFrame frame, String title, boolean modal, VideoType videoType,
-            StructureType structureType, Manager manager, UserInteractionHandler userInteractionHandler,
-            Function<String, ? extends LibraryBuilder> filenameLibraryBuilder) {
+    public StructureBuilderDialog(@Nullable JFrame frame=null, String title, boolean modal, VideoType videoType,
+        StructureType structureType, Manager manager, UserInteractionHandler userInteractionHandler,
+        Function<String, ? extends LibraryBuilder> filenameLibraryBuilder) {
         super(frame, title, modal);
         this.videoType = videoType;
         this.structureType = structureType;
-        this.manager = manager;
         this.userInteractionHandler = userInteractionHandler;
         this.libraryBuilder = filenameLibraryBuilder;
-        initializeUi();
-        generateVideoFiles();
+        initializeUI();
+        generateVideoFiles(manager);
     }
 
-    private void initializeUi() {
+    private void initializeUI() {
         setBounds(100, 100, 600, 300);
         setMinimumSize(new Dimension(600, 300));
-        Container panel = getContentPane().layout(new MigLayout("insets 10, nogrid"));
 
-        new JLabel(Messages.getString("StructureBuilderDialog.AvailableTagsClickToAdd")).addTo(panel, "wrap");
+        contentPane
+            .layout(new MigLayout("insets 10, nogrid"))
+            .addComponent("wrap", new JLabel(getText("StructureBuilderDialog.AvailableTagsClickToAdd")))
+            .addComponent("grow, wrap",
+                tagPanel = new JPanel(new MigLayout("flowy, wrap 5", "[150px][150px][150px]")))
+            .addComponent(new JLabel(getText("StructureBuilderDialog.Structure")))
+            .addComponent("span, wrap",
+                txtStructure = new JTextField()
+                    .columns(100)
+                    .documentListener(this))
+            .addComponent(new JLabel(getText("StructureBuilderDialog.Preview")))
+            .addComponent(lblPreview = new JLabel())
+            .addComponent(BorderLayout.SOUTH, new JPanel(new FlowLayout(FlowLayout.RIGHT))
+                .addComponent(new JButton(getText("App.OK"))
+                    .defaultButtonFor(rootPane)
+                    .actionListener(_ -> {
+                        setVisible(false);
+                        dispose(); // this is needed to dispose the dialog and return the control to the window
+                    })
+                    .actionCommand("OK"))
+                .addComponent(new JButton(getText("App.Cancel"))
+                    .actionListener(_ -> {
+                        setVisible(false);
+                        txtStructure.setText(oldStructure);
+                        dispose(); // this is needed to dispose the dialog and return the control to the window
+                    })
+                    .actionCommand("Cancel")));
 
-        this.tagPanel = new JPanel(new MigLayout("flowy, wrap 5", "[150px][150px][150px]")).addTo(panel, "grow, wrap");
-        {
-            if (videoType == VideoType.EPISODE) {
-                // add tv show tags
-                buildLabelTable(SerieStructureTag.values());
-            } else if (videoType == VideoType.MOVIE) {
-                // add movie tags
-                buildLabelTable(MovieStructureTag.values());
-            }
-            if (structureType == StructureType.FOLDER) {
-                buildLabelTable(FolderStructureTag.values());
-            }
+        switch (videoType) {
+            case EPISODE -> buildLabelTable(SerieStructureTag.values());
+            case MOVIE -> buildLabelTable(MovieStructureTag.values());
         }
-
-        new JLabel(Messages.getString("StructureBuilderDialog.Structure")).addTo(panel);
-        this.txtStructure = new JTextField().withColumns(100).addTo(panel, "span, wrap");
-        this.txtStructure.getDocument().addDocumentListener(this);
-
-        new JLabel(Messages.getString("StructureBuilderDialog.Preview")).addTo(panel);
-        this.lblPreview = new JLabel("").addTo(panel);
-
-        new JPanel(new FlowLayout(FlowLayout.RIGHT)).addTo(panel, BorderLayout.SOUTH)
-                .addComponent(
-                        new JButton(Messages.getString("App.OK"))
-                                .defaultButtonFor(getRootPane())
-                                .withActionListener(e -> {
-                                    setVisible(false);
-                                    dispose(); // this is needed to dispose the dialog and return the control to the window
-                                })
-                                .withActionCommand("OK"))
-                .addComponent(new JButton(Messages.getString("App.Cancel"))
-                        .withActionListener(e -> {
-                            setVisible(false);
-                            txtStructure.setText(oldStructure);
-                            dispose(); // this is needed to dispose the dialog and return the control to the window
-                        })
-                        .withActionCommand("Cancel"));
+        if (structureType == StructureType.FOLDER) {
+            buildLabelTable(FolderStructureTag.values());
+        }
     }
 
-    private void generateVideoFiles() {
+    private void generateVideoFiles(Manager manager) {
         ReleaseFactory releaseFactory = new ReleaseFactory(new Settings(), manager);
-        if (videoType == VideoType.EPISODE) {
-            tvRelease = (TvRelease) releaseFactory.createRelease(
-                    Path.of("Terra.Nova.S01E01E02.Genesis.720p.HDTV.x264-ORENJI.mkv"),
-                    userInteractionHandler);
-        } else if (videoType == VideoType.MOVIE) {
-            movieRelease = (MovieRelease) releaseFactory.createRelease(Path.of("Final.Destination.5.720p.Bluray.x264-TWiZTED"),
-                    userInteractionHandler);
+        switch (videoType) {
+            case EPISODE -> tvRelease = (TvRelease) releaseFactory.createRelease(
+                Path.of("Terra.Nova.S01E01E02.Genesis.720p.HDTV.x264-ORENJI.mkv"),
+                userInteractionHandler, false);
+            case MOVIE -> movieRelease = (MovieRelease) releaseFactory.createRelease(
+                Path.of("Final.Destination.5.2011.720p.Bluray.x264-TWiZTED.mkv"),
+                userInteractionHandler, false);
         }
     }
 
     private void buildLabelTable(StructureTag[] structureTags) {
-        Arrays.stream(structureTags).forEach(this::addTag);
+        structureTags.forEach(this::addTag);
     }
 
     private void addTag(StructureTag structureTag) {
-        new JLabel(structureTag.getLabel())
-                .withToolTipText(structureTag.getDescription())
-                .addTo(tagPanel)
-                .withMouseListener(new InsertTag());
+        new JLabel(structureTag.label)
+            .withToolTipText(structureTag.description)
+            .addTo(tagPanel)
+            .mouseListener(new InsertTag());
     }
 
     public String showDialog(String structure) {
@@ -192,7 +179,7 @@ public class StructureBuilderDialog extends MultiSubDialog implements DocumentLi
                     beforeCaret = txtStructure.getText();
                     afterCaret = "";
                 }
-                txtStructure.setText(String.format("%s%s%s", beforeCaret, clickedTag, afterCaret));
+                txtStructure.setText("%s%s%s".formatted(beforeCaret, clickedTag, afterCaret));
             }
         }
 
