@@ -13,9 +13,8 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 
 /**
- * Hash code is based on Media Player Classic. In natural language it calculates: size + 64bit
- * checksum of the first and last 64k (even if they overlap because the file is smaller than
- * 128k).
+ * Hash code is based on Media Player Classic. In natural language it calculates: size + 64bit checksum of the first and
+ * last 64k (even if they overlap because the file is smaller than 128k).
  */
 public class OpenSubtitlesHasher {
 
@@ -30,8 +29,9 @@ public class OpenSubtitlesHasher {
 
         try (FileChannel fileChannel = FileChannel.open(path, StandardOpenOption.READ)) {
             long head = computeHashForChunk(fileChannel.map(MapMode.READ_ONLY, 0, chunkSizeForFile));
-            long tail = computeHashForChunk(fileChannel.map(MapMode.READ_ONLY, Math.max(size - HASH_CHUNK_SIZE, 0), chunkSizeForFile));
-            return String.format("%016x", size + head + tail);
+            long tail = computeHashForChunk(
+                    fileChannel.map(MapMode.READ_ONLY, Math.max(size - HASH_CHUNK_SIZE, 0), chunkSizeForFile));
+            return "%016x".formatted(size + head + tail);
         }
     }
 
@@ -39,7 +39,8 @@ public class OpenSubtitlesHasher {
 
         int chunkSizeForFile = (int) Math.min(HASH_CHUNK_SIZE, length);
 
-        // buffer that will contain the head and the tail chunk, chunks will overlap if length is smaller than two chunks
+        // buffer that will contain the head and the tail chunk, chunks will overlap if length is smaller than two
+        // chunks
         byte[] chunkBytes = new byte[(int) Math.min(2 * HASH_CHUNK_SIZE, length)];
 
         try (DataInputStream in = new DataInputStream(stream)) {
@@ -59,9 +60,10 @@ public class OpenSubtitlesHasher {
             in.readFully(chunkBytes, chunkSizeForFile, chunkBytes.length - chunkSizeForFile);
 
             long head = computeHashForChunk(ByteBuffer.wrap(chunkBytes, 0, chunkSizeForFile));
-            long tail = computeHashForChunk(ByteBuffer.wrap(chunkBytes, chunkBytes.length - chunkSizeForFile, chunkSizeForFile));
+            long tail = computeHashForChunk(
+                    ByteBuffer.wrap(chunkBytes, chunkBytes.length - chunkSizeForFile, chunkSizeForFile));
 
-            return String.format("%016x", length + head + tail);
+            return "%016x".formatted(length + head + tail);
         }
     }
 
